--- a/docs/Arg 1.ipynb
+++ b/docs/Arg 1.ipynb
@@ -7,14 +7,14 @@
    "source": [
     "# Industry, infrastructure, and nature.\n",
     "\n",
-    "With industry it is understandable that plenty of advanced infrastructure must follow. Things such as airports, regular ports, train stations and railroads, motorways, and roads are all natural results of an advancing society. These improvements in local infrastructure are a direct sign of an increase in wealth since you would rarely see dirt and gravel roads in an advanced first world country. As more and more infrastructure is installed within a country said country often finds itself in the position of being able to shape the rest of its land in whatever way it pleases bringing plenty of other features to its nation.\n",
+    "With industry it is understandable that plenty of advanced infrastructure must follow. Things such as airports, railroads and roads are all natural results of an advancing society. These improvements in local infrastructure are a direct sign of an increase in wealth since you would rarely see dirt and gravel roads in an advanced first world country. As more and more infrastructure is installed within a country said country often finds itself in the position of being able to shape the rest of its land in whatever way it pleases bringing plenty of other features to its nation.\n",
     "\n",
     "It might therefore be interesting to investigate just how a rise in industry and infrastructure might affect local nature."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-29T19:54:50.021408983Z",
@@ -11546,6 +11546,7 @@
         }
        ],
        "layout": {
+        "height": 600,
         "template": {
          "data": {
           "bar": [
@@ -12364,7 +12365,8 @@
         },
         "title": {
          "text": "Relation between density of road and vegetated land <br><sup>Fig 1: This graph shows a clear relation between the increase in total road coverage and decrease of total vegetated land.</sup>"
-        }
+        },
+        "width": 1000
        }
       }
      },
@@ -12392,7 +12394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-29T19:54:50.091735514Z",
@@ -27766,6 +27768,7 @@
         }
        ],
        "layout": {
+        "height": 600,
         "template": {
          "data": {
           "bar": [
@@ -28584,7 +28587,8 @@
         },
         "title": {
          "text": "Relation between vegetated land, percentage of artificial land to total surface area, and the density of road <br><sup>Fig 2: This graph shows how an increase in road density does not directly lead to a decrease in total vegetated land.</sup>"
-        }
+        },
+        "width": 1300
        }
       }
      },
@@ -28601,10 +28605,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If the total amount of artificial surface is added to the equation these figures tell a slightly different story. Artificial surface refers to any surface of land which has been shaped and modeled by humanity without taking roads and railroads into account. This artificial surface is anything from concrete foundations to forests planted by humans. If there are less roads in a country there is more artificial land and if there are more roads there is less artificial land. An explanation for this could very well be that in more developed countries more land is being acquitted to nature preserves and hand-made forests instead of motorways and roads. The opposite is then also true, with more roads less money and land is being spent on the preservation of nature. Only looking at the relation between two things can paint an incomplete picture of a situation, but by looking at multiple factors it is possible to get a reasonable idea of a country's industry and infrastructure.\n",
+    "If the total amount of artificial surface is added to the equation these figures tell a slightly different story. Artificial surface refers to any surface of land which has been shaped and modeled by humanity without taking roads and railroads into account. If there are less roads in a country there is more artificial land and if there are more roads there is less artificial land. An explanation for this could very well be that in more developed countries more land is being acquitted to nature preserves and hand-made forests instead of motorways and roads. The opposite is then also true, with more roads less money and land is being spent on the preservation of nature. By looking at more relations you get a broader view.\n",
     "\n",
     "Due to the complex nature of this particular view it might be a better idea to look at a different way of measuring the effects of industry."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
