--- a/docs/Arg 2.ipynb
+++ b/docs/Arg 2.ipynb
@@ -7,14 +7,14 @@
    "source": [
     "# Industry size and greenhouse gasses\n",
     "\n",
-    "Another way to approach the growth of a country's industry is by looking at its total workforce. The more people work in a country the bigger its industry potentially is. A concern that has taken up a very prominent role in a lot of discussions nowadays is that of global warming. The overwhelming majority of scientist on Earth agree on the fact that humanity and their activity on this planet is in large part responsible for the rapid shift in global temperatures. This is mostly due to an increase of greenhouse gasses in the atmosphere caused mostly by intense industry and infrastructure. One of the most well-known and well-documented of these greenhouse gasses is CO2 or carbon dioxide, the gas that we and most living creatures produce by simply breathing.\n",
+    "Another way to approach the growth of a country's industry is by looking at its total workforce. The more people work in a country the bigger its industry potentially is. A concern that has taken up a prominent role in a lot of discussions nowadays is that of global warming. The majority of scientist on Earth agree on the fact that humanity and their activity on this planet is mostly responsible for the shift in global temperatures. This is mostly due to an increase of greenhouse gasses in the atmosphere caused mostly by intense industry and infrastructure. One of the most well-known and well-documented of these greenhouse gasses is CO2 or carbon dioxide, the gas that we and most living creatures produce by simply breathing.\n",
     "\n",
     "So what does the data say about the relation between CO2 emissions and a country's total workforce?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-29T19:56:24.745303906Z",
@@ -164,6 +164,7 @@
           "yref": "paper"
          }
         ],
+        "height": 700,
         "template": {
          "data": {
           "bar": [
@@ -983,6 +984,7 @@
         "title": {
          "text": "United States' industry <br><sup>Fig 3: This graph shows that there is no existing positive relation between the growing labor force in the US and the declining total CO2 emissions.</sup>"
         },
+        "width": 1300,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -1035,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-29T19:56:24.747334719Z",
@@ -1185,6 +1187,7 @@
           "yref": "paper"
          }
         ],
+        "height": 700,
         "template": {
          "data": {
           "bar": [
@@ -2004,6 +2007,7 @@
         "title": {
          "text": "Russia's industry <br><sup>Fig 4: This graph shows that there is a positive correlation between the growing workforce in Russia and its rise in total CO2 emissions.</sup>"
         },
+        "width": 1300,
         "xaxis": {
          "anchor": "y",
          "domain": [
