--- a/docs/Graphs Arg 1.ipynb
+++ b/docs/Graphs Arg 1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-29T19:37:42.011286782Z",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-29T19:37:42.236114690Z",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-29T19:37:42.659108381Z",
@@ -11588,6 +11588,7 @@
         }
        ],
        "layout": {
+        "height": 600,
         "template": {
          "data": {
           "bar": [
@@ -12406,7 +12407,8 @@
         },
         "title": {
          "text": "Relation between density of road and vegetated land <br><sup>Fig 1: This graph shows a clear relation between the increase in total road coverage and decrease of total vegetated land.</sup>"
-        }
+        },
+        "width": 1000
        }
       }
      },
@@ -12425,7 +12427,8 @@
     "comb_sorted = new_df_comb.sort_values(by='qcut_road')\n",
     "\n",
     "layout = go.Layout(\n",
-    "    title='Relation between density of road and vegetated land <br><sup>Fig 1: This graph shows a clear relation between the increase in total road coverage and decrease of total vegetated land.</sup>'\n",
+    "    title='Relation between density of road and vegetated land <br><sup>Fig 1: This graph shows a clear relation between the increase in total road coverage and decrease of total vegetated land.</sup>',\n",
+    "    height=600, width=1000\n",
     ")\n",
     "\n",
     "colors = {\n",
@@ -12457,7 +12460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-29T19:37:43.078195414Z",
@@ -27835,6 +27838,7 @@
         }
        ],
        "layout": {
+        "height": 600,
         "template": {
          "data": {
           "bar": [
@@ -28653,7 +28657,8 @@
         },
         "title": {
          "text": "Relation between vegetated land, percentage of artificial land to total surface area, and the density of road <br><sup>Fig 2: This graph shows how an increase in road density does not directly lead to a decrease in total vegetated land.</sup>"
-        }
+        },
+        "width": 1300
        }
       }
      },
@@ -28673,7 +28678,8 @@
     "comb_sorted = new_df_comb.sort_values(by='qcut_road')\n",
     "\n",
     "layout = go.Layout(\n",
-    "    title='Relation between vegetated land, percentage of artificial land to total surface area, and the density of road <br><sup>Fig 2: This graph shows how an increase in road density does not directly lead to a decrease in total vegetated land.</sup>'\n",
+    "    title='Relation between vegetated land, percentage of artificial land to total surface area, and the density of road <br><sup>Fig 2: This graph shows how an increase in road density does not directly lead to a decrease in total vegetated land.</sup>',\n",
+    "    height=600, width=1300\n",
     ")\n",
     "\n",
     "colors = {\n",
