--- a/docs/Graphs Arg 2.ipynb
+++ b/docs/Graphs Arg 2.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-29T19:37:17.633097539Z",
@@ -60,21 +60,6 @@
      "output_type": "stream",
      "text": [
       "Stored 'fig_russia' (Figure)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/olivier/.local/lib/python3.10/site-packages/plotly/graph_objs/_deprecations.py:378: DeprecationWarning:\n",
-      "\n",
-      "plotly.graph_objs.Line is deprecated.\n",
-      "Please replace it with one of the following more specific types\n",
-      "  - plotly.graph_objs.scatter.Line\n",
-      "  - plotly.graph_objs.layout.shape.Line\n",
-      "  - etc.\n",
-      "\n",
-      "\n"
      ]
     },
     {
@@ -216,6 +201,7 @@
           "yref": "paper"
          }
         ],
+        "height": 700,
         "template": {
          "data": {
           "bar": [
@@ -1035,6 +1021,7 @@
         "title": {
          "text": "Russia's industry <br><sup>Fig 4: This graph shows that there is a positive correlation between the growing workforce in Russia and its rise in total CO2 emissions.</sup>"
         },
+        "width": 1300,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -1080,7 +1067,8 @@
     "\n",
     "fig_russia.add_trace(go.Line(x=tryout2['Year'], y=tryout2['Labour Force Total']), row=1, col=2)\n",
     "\n",
-    "fig_russia.update_layout(title_text=\"Russia's industry <br><sup>Fig 4: This graph shows that there is a positive correlation between the growing workforce in Russia and its rise in total CO2 emissions.</sup>\")\n",
+    "fig_russia.update_layout(title_text=\"Russia's industry <br><sup>Fig 4: This graph shows that there is a positive correlation between the growing workforce in Russia and its rise in total CO2 emissions.</sup>\",\n",
+    "                         height=700, width=1300)\n",
     "\n",
     "%store fig_russia\n",
     "\n",
@@ -1089,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-06-29T19:37:17.635995653Z",
@@ -1243,6 +1231,7 @@
           "yref": "paper"
          }
         ],
+        "height": 700,
         "template": {
          "data": {
           "bar": [
@@ -2062,6 +2051,7 @@
         "title": {
          "text": "United States' industry <br><sup>Fig 3: This graph shows that there is no existing positive relation between the growing labor force in the US and the declining total CO2 emissions.</sup>"
         },
+        "width": 1300,
         "xaxis": {
          "anchor": "y",
          "domain": [
@@ -2107,7 +2097,8 @@
     "\n",
     "fig_us.add_trace(go.Line(x=tryout2['Year'], y=tryout2['Labour Force Total']), row=1, col=2)\n",
     "\n",
-    "fig_us.update_layout(title_text=\"United States' industry <br><sup>Fig 3: This graph shows that there is no existing positive relation between the growing labor force in the US and the declining total CO2 emissions.</sup>\")\n",
+    "fig_us.update_layout(title_text=\"United States' industry <br><sup>Fig 3: This graph shows that there is no existing positive relation between the growing labor force in the US and the declining total CO2 emissions.</sup>\",\n",
+    "                     height=700, width=1300)\n",
     "\n",
     "%store fig_us\n",
     "\n",
