--- a/docs/Intro.ipynb
+++ b/docs/Intro.ipynb
@@ -14,13 +14,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Group \n",
+    "R3\n",
     "## Group members\n",
     "1. Surja Sarker\n",
     "2. Ruben Veltman\n",
     "3. Olivier Stam\n",
-    "\n",
-    "## Group \n",
-    "R3"
+    "\n"
    ]
   },
   {
@@ -28,6 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Industry and Innovation and their effects\n",
     "The industrial revolution was exactly that, a revolution. A time in which our way of living was changed drastically through the automation of the production of many goods in bulk, the advancement of science and medicine, and the following growth in the quality of life itself for so many all over the world. The rise of industry brought a great deal of incredible things with skyrocketing the world into a global society connecting nearly everyone on Earth.\n",
     "\n",
     "Though as we know today, the effects of industry are not all fantastic. In recent years more and more concerns have been raised on the topic of global warming which has been on the rise ever since the conception of modern day industry. Apart from the explosive increase of greenhouse gasses such as CO2 and methane in the atmosphere caused by human activities such as industry there are also plenty of other pollutants that the environment has to deal with. By infecting the ground and water, pollutants threaten to destroy entire ecosystems and cause many species of plants and animals to go extinct.\n",
@@ -42,7 +43,9 @@
    "source": [
     "# Dataset and Preprocessing\n",
     "\n",
-    "In order to conduct our research on this matter it was necessary to acquire a few datasets to look at and find connections between. Five separate datasets were selected, a dataset on water quality, a dataset on industry, a dataset on infrastructure, a dataset on innovation, and lastly a dataset on nature. Every dataset contains a column with three-letter country tags which were used to join the datasets together during the research process. Therefor this column was renamed to 'ISO3' in every dataset. The dataset were also each pivoted in order to match the same column pattern and order. With this country tag column as the join key all of the data has been ordered by year. The following is a short rundown of each dataset with links to each webpage."
+    "In order to conduct our research on this matter it was necessary to acquire a few datasets to look at and find connections between. Five separate datasets were selected, a dataset on water quality, industry, infrastructure, innovation and lastly a dataset on nature. Every dataset contains a column with three-letter country tags which were used to join the datasets together during the research process. This column was renamed to 'ISO3' in every dataset. The dataset were also all ordered by country and year.\n",
+    "\n",
+    "All datasets provide information about a multitude of different major countries from the year 2000 up until the year 2020"
    ]
   },
   {
@@ -54,12 +57,12 @@
     "\n",
     "Original link: https://washdata.org/data/country/WLD/household/download\n",
     "\n",
-    "Short description:  This dataset contains 46 different attributes and 4914 different entries. These attributes include things such as total population, rural surface water percentage and to what extend water quality and access has improved in different regions for almost every major country on earth from the year 2000 up until the year 2020. The data is split in three main categories:\n",
+    "This dataset contains 46 different attributes and 4914 different entries. These attributes include things such as total population, rural surface water percentage and to what extend water quality and access has improved. The data is split in three main categories:\n",
     "1. National (Proportion)\n",
     "2. Urban (Proportion)\n",
     "3. Rural (Proportion)\n",
     "\n",
-    "Preprocessing: With preprocessing the attributes' names changed, in order to make it more readable in pandas. The categories National/Urban/Rural got merged into the attribute names, so from category Rural with subcategory Surface water, the new attribute name would be changed to 'RURAL-Surface water'. In order to make up for missing data the data has been filled in, grouped by country, with the python functions ffill() and bfill(). The countries have been seperated for this step so their data wouldn't intervene. Strings like '>99' have also been changed to floats 99.0 and these are now the maximum values for these attributes."
+    "With preprocessing the attributes' names changed, in order to make it more readable in pandas. In order to make up for missing data the data has been corrected, grouped by country, with the python functions ffill() and bfill(). This was possible because there was little missing data with slow changes between years. Strings like '>99' have also been changed to floats 99.0 and these are now the maximum values for these attributes."
    ]
   },
   {
@@ -261,7 +264,7 @@
     "\n",
     "Original link: https://stats.oecd.org/Index.aspx?QueryId=73638\n",
     "\n",
-    "Short description:  This dataset contains 23 attributes and 1340 entries which provide information about a multitude of different major countries from the year 2000 up until the year 2020 on the topic of nation wide infrastructure. Such points of information include such things as the number of airports per 1 million of inhabitants, the total density of road and inland waterway infrastructure spending."
+    "This dataset contains 23 attributes and 1340 entries on the topic of nation wide infrastructure. Such points of information include such things as the number of airports per 1 million of inhabitants, the total density of road and inland waterway infrastructure spending."
    ]
   },
   {
@@ -497,7 +500,7 @@
     "\n",
     "Original link: https://stats.oecd.org/Index.aspx?DataSetCode=GREEN_GROWTH\n",
     "\n",
-    "Short description:  This dataset contains 165 different attributes and 5366 total entries detailing different points of information from a grand multitude of different countries on the topic of green growth. Green growth is a concept which is measured in a number of ways such as the CO2 productivity, energy productivity, and freshwater and forest resources. These points of data provide insight into the progress countries have been making towards a greener and more environmentally friendly way of living."
+    "This dataset contains 165 different attributes and 5366 total entries detailing different points of information from a grand multitude of different countries on the topic of green growth. Green growth is a concept which is measured in a number of ways such as the CO2 productivity, energy productivity, and freshwater and forest resources. These points of data provide insight into the progress countries have been making towards a greener and more environmentally friendly way of living."
    ]
   },
   {
@@ -718,7 +721,7 @@
     "\n",
     "Original link: https://stats.oecd.org/Index.aspx?DataSetCode=REGION_INNOVATION\n",
     "\n",
-    "Short description: This dataset has 82 different attributes and 1005 total entries which provide information on the topic of regional information for most countries on Earth. These attributes include things such as different levels of student enrolment, the spread of the workforce throughout the different sectors, and progress and innovation on numerous things such as nanotech and medicine. This dataset could provide insight into how well developed countries are and how they have progressed throughout the years."
+    "This dataset has 82 different attributes and 1005 total entries which provide information on the topic of regional information for most countries on Earth. These attributes include things such as different levels of student enrolment and the spread of the workforce throughout the different sectors. This dataset could provide insight into how well developed countries are and how they have progressed throughout the years."
    ]
   },
   {
@@ -954,7 +957,7 @@
     "\n",
     "Original link: https://stats.oecd.org/Index.aspx?DataSetCode=MEI_REAL\n",
     "\n",
-    "Short description:  This dataset contains 14 attributes and 987 different entries of a multitude of different countries from the year 2000 up until the year 2020 on the topic of the production and sales of different products a country produces. These attributes include things such as production of different kinds of goods such as intermediate goods and service goods, and the production of energy and electricity. With this dataset it is possible to gain insight into the kind of services a country provides which allows one to determine its place on the world's grand stage."
+    "Short description:  This dataset contains 14 attributes and 987 different entries on the topic of the production and sales of different products a country produces. These attributes include things such as production of different kinds of goods such as intermediate goods and service goods, and the production of energy and electricity. With this dataset it is possible to gain insight into the kind of services a country provides which allows one to determine its place on the world's grand stage."
    ]
   },
   {
@@ -1131,7 +1134,7 @@
    "source": [
     "#### Preprocessing code\n",
     "For a more detailed analysis of how the datasets have been preprocessed please follow the link to the git repository:\n",
-    "https://github.com/olivierstam4/Informatievisualisatie/tree/main/docs/preprocess-research/Preprocess"
+    "https://github.com/olivierstam4/Informatievisualisatie/tree/main/docs/preprocess-research/Preprocess\n"
    ]
   },
   {
