veel midner woorden

--- a/docs/Arg 4.ipynb
+++ b/docs/Arg 4.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "2cc9c0ad",
    "metadata": {},
    "outputs": [
@@ -187,7 +187,7 @@
           "text": "Fig 7: This graph shows the progression of the average industrial production which is defined by OECD as the following: ",
           "x": 0,
           "xref": "paper",
-          "y": -0.2,
+          "y": -0.12,
           "yref": "paper"
          },
          {
@@ -198,7 +198,7 @@
           "text": "\"Industrial production refers to the output of industrial establishments and covers sectors such as mining, manufacturing, electricity, gas and steam and air-conditioning.\"",
           "x": 0,
           "xref": "paper",
-          "y": -0.25,
+          "y": -0.15,
           "yref": "paper"
          },
          {
@@ -209,10 +209,11 @@
           "text": "it shows this index per year and for three different groups. for the groups countries are placed into three groups and are sorted by low medium and high GDP. ",
           "x": 0,
           "xref": "paper",
-          "y": -0.3,
+          "y": -0.18,
           "yref": "paper"
          }
         ],
+        "height": 700,
         "legend": {
          "title": {
           "text": "GDP Bin"
@@ -1043,6 +1044,7 @@
         "title": {
          "text": "Average Industry Production by GDP Bin"
         },
+        "width": 1300,
         "xaxis": {
          "title": {
           "text": "Year"
@@ -1076,6 +1078,13 @@
     "\n",
     "While this could be benifitial for these developing nations in terms of income, the fact is that at face value their polution rates will be much higher that the countries which contain the countries that pollute."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "9c1b38c8",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
