--- a/docs/Work distribution.ipynb
+++ b/docs/Work distribution.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Work distribution\n",
     "Every part of this research has been touched by all group members. Everything has been discussed together, from the brainstorming to preprocessing to creating the figures. \n",
-    "That being said, some parts have been worked on more by certain memebers, hereby an overview:\n",
+    "That being said, some parts have been worked on more by certain members, hereby an overview:\n",
     "\n",
     "## Ruben:\n",
     "1. Arguments 1 and 2\n",
