--- a/docs/Reflection.ipynb
+++ b/docs/Reflection.ipynb
@@ -10,7 +10,7 @@
     "# Feedback from group / TA\n",
     "#### Feedback van groepen J3, R4\n",
     "\n",
-    "1. Plots waren duidelijk /\n",
+    "1. Plots waren duidelijk\n",
     "2. Link naar repository voor met name preprocessing in de appendix.\n",
     "3. Let op de hoeveelheid tekst.\n",
     "4. Variabelen duidelijker aangeven, komt weer terug op tekst gebruiken als onderbouwing.\n",
@@ -24,9 +24,9 @@
    "metadata": {},
    "source": [
     "# Take aways\n",
-    "After the feedback we realized we had to change up the wording a lot, we had to let the figures do the explaining instead of the text. We changed all texts and looked carefully after the wordcount.\n",
+    "After the feedback we realized we had to change up the wording and had to let the figures do the explaining. We changed all texts to achieve this.\n",
     "\n",
-    "We also changed the way of showing our preprocessing, now with a link to the repository to see the full code.\n",
+    "We also changed the way of showing our exact preprocessing, which is a link now.\n",
     "\n",
     "We changed the annotations and explained the variables more carefully.\n",
     "\n",
