--- a/docs/Arg 5.ipynb
+++ b/docs/Arg 5.ipynb
@@ -5,12 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Emissions and  prevention"
+    "# Emissions and  prevention\n",
+    "\n",
+    "we have established that the grow in industry has both positive as negative effects. But what are we doing to combat those negatives?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -25,6 +27,7 @@
          "legendgroup": "",
          "marker": {
           "color": "#636efa",
+          "size": 7,
           "symbol": "circle"
          },
          "mode": "markers",
@@ -98,6 +101,31 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "font": {
+           "size": 12
+          },
+          "showarrow": false,
+          "text": "Fig 8: This graph shows the Average Development of environment related technologies as a percentage of worldwide inventions per year",
+          "x": 0.5,
+          "xref": "paper",
+          "y": 1,
+          "yref": "paper"
+         },
+         {
+          "font": {
+           "size": 12
+          },
+          "showarrow": false,
+          "text": "compared to the year and the average amount of carbon emissions for that year",
+          "x": 0.5,
+          "xref": "paper",
+          "y": 0.95,
+          "yref": "paper"
+         }
+        ],
+        "height": 600,
         "legend": {
          "tracegroupgap": 0
         },
@@ -105,6 +133,13 @@
          "t": 60
         },
         "scene": {
+         "camera": {
+          "eye": {
+           "x": 1.8,
+           "y": -1.8,
+           "z": 0.6
+          }
+         },
          "domain": {
           "x": [
            0,
@@ -122,12 +157,12 @@
          },
          "yaxis": {
           "title": {
-           "text": "Avg Technologies"
+           "text": "AVG Dev environment related technologies"
           }
          },
          "zaxis": {
           "title": {
-           "text": "Avg Emissions"
+           "text": "Average Carbon emissions"
           }
          }
         },
@@ -948,14 +983,35 @@
          }
         },
         "title": {
-         "text": "Scatter Plot"
-        }
+         "text": "Average development of environmental technologies and carbon emissions per year"
+        },
+        "width": 1200
        }
       }
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "%store -r fig3dreg\n",
+    "%store -r fig3d\n",
+    "fig3d.show()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Looking at Fig 8 we can see that in teh last years there has been collectively more Carbon emissions but also more money spent in preventing these.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "application/vnd.plotly.v1+json": {
@@ -968,7 +1024,7 @@
           "color": "rgb(31, 119, 180)"
          },
          "mode": "markers",
-         "name": "Data",
+         "name": "Data per year",
          "type": "scatter",
          "x": [
           1.4001538461538463,
@@ -1068,7 +1124,7 @@
         "annotations": [
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2000",
@@ -1079,7 +1135,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2001",
@@ -1090,7 +1146,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2002",
@@ -1101,7 +1157,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2003",
@@ -1112,7 +1168,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2004",
@@ -1123,7 +1179,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2005",
@@ -1134,7 +1190,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2006",
@@ -1145,7 +1201,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2007",
@@ -1156,7 +1212,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2008",
@@ -1167,7 +1223,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2009",
@@ -1178,7 +1234,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2010",
@@ -1189,7 +1245,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2011",
@@ -1200,7 +1256,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2012",
@@ -1211,7 +1267,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2013",
@@ -1222,7 +1278,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2014",
@@ -1233,7 +1289,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2015",
@@ -1244,7 +1300,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2016",
@@ -1255,7 +1311,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2017",
@@ -1266,7 +1322,7 @@
          },
          {
           "font": {
-           "size": 8
+           "size": 12
           },
           "showarrow": false,
           "text": "2018",
@@ -1274,8 +1330,20 @@
           "xshift": 5,
           "y": 656.355737704918,
           "yshift": -10
+         },
+         {
+          "font": {
+           "size": 12
+          },
+          "showarrow": false,
+          "text": "Fig 9: Regressional line of the Average Carbon emission data per year compared to the Average Development in environmental related technologies per year",
+          "x": 0.5,
+          "xref": "paper",
+          "y": -0.15,
+          "yref": "paper"
          }
         ],
+        "height": 600,
         "template": {
          "data": {
           "bar": [
@@ -2093,16 +2161,17 @@
          }
         },
         "title": {
-         "text": "Scatter Plot with Regression Line"
+         "text": "Regression line of the Average carbon emissions and development in environmental technologies per year"
         },
+        "width": 1200,
         "xaxis": {
          "title": {
-          "text": "Avg Technologies"
+          "text": "Average Development (environment related) technologies"
          }
         },
         "yaxis": {
          "title": {
-          "text": "Avg Emissions"
+          "text": "Average Carbon emissions"
          }
         }
        }
@@ -2113,17 +2182,21 @@
     }
    ],
    "source": [
-    "%store -r fig3dreg\n",
-    "%store -r fig3d\n",
-    "fig3d.show()\n",
     "fig3dreg.show()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Looking at Fig 9 we can see that, with outliers, there is a trend going on of more emissions but also countries looking at ways of preventing and decreasing these. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
