--- a/docs/Arg 5.ipynb
+++ b/docs/Arg 5.ipynb
@@ -2190,7 +2190,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at Fig 9 we can see that, with outliers, there is a trend going on of more emissions but also countries looking at ways of preventing and decreasing these. "
+    "Looking at Fig 9 we can see that, with outliers, there is a trend going on of more emissions but also countries looking at ways of preventing and decreasing these. \n",
+    "\n",
+    "Therefore we can conclude that the world is busy combating the negatives of the industry growth and trying to maximize the positives."
    ]
   },
   {
