--- a/docs/Arg 5.ipynb
+++ b/docs/Arg 5.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Emissions and  prevention\n",
     "\n",
-    "we have established that the grow in industry has both positive as negative effects. But what are we doing to combat those negatives?"
+    "We have established that the growth in industry has both positive and negative effects. But what are we doing to combat and prevent those negatives?"
    ]
   },
   {
@@ -1004,7 +1004,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at Fig 8 we can see that in teh last years there has been collectively more Carbon emissions but also more money spent in preventing these.\n"
+    "Looking at Fig 8 we can see that in the last 20 years there has in total been more carbon emissions but also more money spent in preventing these emissions."
    ]
   },
   {
@@ -2190,7 +2190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at Fig 9 we can see that, with outliers, there is a trend going on of more emissions but also countries looking at ways of preventing and decreasing these. \n",
+    "Looking at Fig 9 we can see that, with outliers, there is a trend going on of more emissions but also more effort by countries looking at ways of preventing and decreasing these emissions.\n",
     "\n",
     "Therefore we can conclude that the world is busy combating the negatives of the industry growth and trying to maximize the positives."
    ]
